# sourcelines

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  cargo-build.sh  chatlog  meson.build  meson_options.txt  release-version.txt  sourcelines-completion.bash  sourcelines.html  sourcelines.md  sourcelines.tex  sourcelines.txt  wcc-completion.bash
debian/: changelog  control  rules
scripts/: build-deb.sh
src/: lib.rs  main.rs
tests/: integration.rs
tests/testdata/: simple.c  simple.py  simple.sh  simple.txt
