option('bash_completion_dir',
  type: 'string',
  value: '',
  description: 'Directory for bash completion scripts (default: $datadir/bash-completion/completions)')

option('man_dir',
  type: 'string',
  value: '',
  description: 'Directory for man pages (default: $datadir/man/man1)')

option('build_manpage',
  type: 'boolean',
  value: true,
  description: 'Build and install the man page (requires pandoc)')